fix text alignment on chrome + add vignette
also fix spacing on unreadable function

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,6 @@ body{
 	background:#191919;
 	color:#f0f0f0;
 }
-.vignette{background-image:radial-gradient(#0000,#000),url(../img/wallpaper.png);}
 .vignette::before{
 	opacity:1;
 	background:radial-gradient(#0000 75%,#000);
@@ -112,6 +111,7 @@ ul{text-align:left;list-style:none;}
 }
 .desktop-icon::after{
 	font-size:11px;
+	margin:auto;
 	flex-shrink:1;
 	color:#f0f0f0;
 	text-shadow:1px 1px 4px #001222,1px 1px 4px #001222;
@@ -341,8 +341,9 @@ button#think:active{background:#003366c0;box-shadow:inset 0 6px 4px -4px #0080ff
 	display:flex;
 	width:154px;
 	font-size:11px;
+	white-space:nowrap;
 	text-align:right;
-	margin-right:4px;
+	margin:auto 4px auto 0;
 	border:3px solid;
 	border-color:#0008 #e8e8e880 #e8e8e880 #0008;
 	border-radius:2px;
